--- a/templates/includes/datatables_css.html
+++ b/templates/includes/datatables_css.html
@@ -1,4 +1,4 @@
 {% load static %}
-<!-- DataTables CSS - يُضاف في {% block datatables_css %} -->
+<!-- DataTables CSS - يُضاف في block datatables_css -->
 <link rel="stylesheet" type="text/css" href="{% static 'vendor/datatables/dataTables.bootstrap5.min.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'vendor/datatables/responsive.bootstrap5.min.css' %}">
