--- a/templates/includes/datatables_js.html
+++ b/templates/includes/datatables_js.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!-- DataTables JS - يُضاف في {% block datatables_js %} -->
+<!-- DataTables JS - يُضاف في block datatables_js -->
 <script type="text/javascript" src="{% static 'vendor/datatables/jquery.dataTables.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'vendor/datatables/dataTables.bootstrap5.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'vendor/datatables/dataTables.responsive.min.js' %}"></script>
